<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context="se.thehorror.quiz.EndActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/high_score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#e50000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageButton
        android:id="@+id/smsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restartImageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="smsButton"
        android:background="@android:color/transparent"
        android:src="@drawable/sms" />

    <ImageButton
        android:id="@+id/emilImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/smsImageButton"
        android:layout_alignLeft="@+id/smsImageButton"
        android:layout_marginBottom="16dp"
         android:onClick="emailButton"
        android:background="@android:color/transparent"
        android:src="@drawable/email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emilImageButton"
        android:layout_alignRight="@+id/emilImageButton"
        android:text="@string/sms_and_email_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scoreListView"
        android:layout_below="@+id/questionTextView"
        android:layout_marginTop="20dp"
        android:text="@string/hex"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scoreListView"
        android:layout_alignLeft="@+id/emilImageButton"
        android:text="@string/score_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF" />

    <ListView
        android:id="@+id/scoreListView"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" >
    </ListView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scoreListView"
        android:layout_alignRight="@+id/scoreListView"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF" />

    <ImageButton
        android:id="@+id/restartImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/smsImageButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
         android:onClick="restartGameButton"
        android:background="@android:color/transparent"
        android:src="@drawable/restartbutton" />

</RelativeLayout>

